Case - Task Init

--- a/force-app/main/default/classes/stoHelperClass.cls
+++ b/force-app/main/default/classes/stoHelperClass.cls
@@ -53,111 +53,12 @@ public with sharing class stoHelperClass {
         String relatedObjId;
         Thread__c thread;
 
-        User personUser = [
-            SELECT
-                AccountId,
-                ContactId,
-                Contact.Account.CRM_Person__r.INT_IsNavEmployee__c,
-                Contact.Account.CRM_Person__r.INT_Confidential__c
-            FROM User
-            WHERE Id = :UserInfo.getUserId()
-        ];
+        User personUser = [SELECT AccountId, ContactId FROM User WHERE Id = :UserInfo.getUserId()];
 
-        if (isCaseRouting(personUser)) {
-            //Create case Record and insert it
-            relatedObjId = createCase(theme, personUser.AccountId).Id;
-            thread = createThread(relatedObjId, theme, personUser);
-        } else {
-            thread = createThread(null, theme, personUser);
-            relatedObjId = createNavTask(personUser.AccountId, thread.Id).Id;
-            //Updates the thread relation in future context as the Thread ID is needed on the NAV Task NKS_Henvendelse_BehandlingsId__c for accessability through Gosys/Modia
-            updateThreadRelation(thread.Id, relatedObjId);
-        }
+        thread = createThread(null, theme, personUser);
         createMessage(thread, msgText, personUser.ContactId);
 
         return thread.Id;
-    }
-
-    /**
-     * @description: Defines logic if the incoming message should be routed via Case or if routing via NavTask__c is to be performed
-     * @author Stian Ruud Schikora | 07-23-2021
-     * @return Boolean
-     **/
-    private static Boolean isCaseRouting(User usr) {
-        Boolean caseRouting = true;
-        String confidentiality = String.isNotBlank(usr.Contact.Account.CRM_Person__r.INT_Confidential__c)
-            ? usr.Contact.Account.CRM_Person__r.INT_Confidential__c
-            : '';
-
-        if (
-            confidentiality.equalsIgnoreCase('STRENGT_FORTROLIG') ||
-            confidentiality.equalsIgnoreCase('STRENGT_FORTROLIG_UTLAND')
-        ) {
-            caseRouting = false;
-        }
-
-        //Do necessary checks on confidential and NAV employee to determine the outcome
-        return caseRouting;
-    }
-
-    /**
-     * Creates a STO Case.
-     * Invokes Assignment rules using DMLOptions
-     * @author Lars Petter Johnsen
-     * @Date 08.06.2021
-     */
-    @TestVisible
-    private static Case createCase(String theme, String accountId) {
-        Database.DMLOptions dmlOpts = new Database.DMLOptions();
-        dmlOpts.assignmentRuleHeader.UseDefaultRule = true;
-
-        Case casy = new Case();
-        casy.Subject = 'Skriv til oss - ' + theme;
-        casy.STO_Category__c = theme;
-        casy.Origin = 'Web';
-        casy.RecordTypeId = STO_CASE_RECORD_TYPE;
-
-        casy.AccountId = accountId;
-
-        //Invoke assignment rules
-        casy.setOptions(dmlOpts);
-        try {
-            insert casy;
-        } catch (DmlException e) {
-            logger.exception(e);
-            logger.publish();
-        }
-        return casy;
-    }
-
-    @testVisible
-    private static NavTask__c createNavTask(String accountId, String threadId) {
-        //Generate a NavTask that is to be routed via oppgave with the correct external reference to thread so that it can be viewed correctly in Modia
-        NavTask__c newTask = new NavTask__c();
-        newTask.CRM_Account__c = accountId;
-        newTask.NKS_Theme__c = commonCodeMap.get('KNA');
-        newTask.NKS_TaskType__c = commonCodeMap.get('SPM_OG_SVR');
-        newTask.NKS_Comments__c = 'DEFAULT COMMENTS?';
-        newTask.CRM_Priority__c = 'NORM';
-        newTask.CRM_NavUnit__c = null; // Setting to null to trigger default task distribution
-        newTask.NKS_Subtheme__c = null; // Need to include as flow fails if field is not defined
-        newTask.NKS_Henvendelse_BehandlingsId__c = threadId;
-
-        Map<String, Object> flowInputs = new Map<String, Object>{
-            'NAV_Task' => newTask,
-            'Created_By_Unit_Number' => null
-        };
-
-        //Performs the outbound call for submitting task to oppgave
-        Flow.Interview taskFlow = Flow.Interview.createInterview('CRM_Send_NAV_Task_Auto', flowInputs);
-        taskFlow.start();
-
-        return (NavTask__c) taskFlow.getVariableValue('NAV_Task');
-    }
-
-    @future
-    private static void updateThreadRelation(String threadId, String relatedObjId) {
-        update new Thread__c(Id = threadId, CRM_Related_Object__c = relatedObjId);
     }
 
     private static Thread__c createThread(String relatedObjId, String theme, User personUser) {
