--- a/force-app/main/default/classes/stoInboxHelper.cls
+++ b/force-app/main/default/classes/stoInboxHelper.cls
@@ -1,21 +1,19 @@
-public with sharing class stoInboxHelper {
-    /**
-     * Get all threads. Utilize sharing sets to filter the correct messages
-     * @Author Lars Petter
-     */
+public with sharing class stoInboxHelper {    
+    
+    //TODO: Use custom labels 
+
     @AuraEnabled(cacheable=true)
     public static List<thread> getThreads() {
         List<thread> inboxlist = new List <thread>(); 
         List<Thread__c> threadList = [
-            SELECT Id, Name, LastModifiedDate, CRM_Number_of_unread_Messages__c, CRM_Latest_Message_Datetime__c, CRM_Closed_Date__c 
+            SELECT Id, Name, LastModifiedDate, CRM_Number_of_unread_Messages__c, CRM_Latest_Message_Datetime__c, CRM_Closed_Date__c, STO_External_Name__c  
             FROM Thread__c
             WHERE (CRM_Number_of_unread_Messages__c = 0 AND CRM_Closed_Date__c != null )
             ORDER BY CRM_Latest_Message_Datetime__c DESC
         ];
         for(Thread__c t : threadList){
             thread i = new thread(); 
-            //TODO: Add name when formula fields are moved 
-            i.name = t.Name; 
+            i.name = t.STO_External_Name__c; 
             i.recordId = t.Id; 
             i.lastModifiedDate = t.LastModifiedDate; 
             i.closeDate = t.CRM_Closed_Date__c; 
@@ -50,15 +48,14 @@ public with sharing class stoInboxHelper {
     public static List<thread> getRecentThreads() {
         List<thread> inboxlist = new List <thread>(); 
         List<Thread__c> threadList = [
-            SELECT Id, Name, LastModifiedDate, CRM_Number_of_unread_Messages__c, CRM_Latest_Message_Datetime__c, CRM_Closed_Date__c 
+            SELECT Id, Name, LastModifiedDate, CRM_Number_of_unread_Messages__c, CRM_Latest_Message_Datetime__c, CRM_Closed_Date__c, STO_External_Name__c 
             FROM Thread__c 
             WHERE (CRM_Number_of_unread_Messages__c > 0 OR CRM_Closed_Date__c = null)
             ORDER BY CRM_Latest_Message_Datetime__c DESC
         ];
         for(Thread__c t : threadList){
             thread i = new thread(); 
-            //TODO: Add name when formula fields are moved 
-            i.name = t.Name; 
+            i.name = t.STO_External_Name__c; 
             i.recordId = t.Id; 
             i.lastModifiedDate = t.LastModifiedDate; 
             i.closeDate = t.CRM_Closed_Date__c; 
@@ -70,7 +67,7 @@ public with sharing class stoInboxHelper {
             inboxlist.add(i);  
         }
         List<Conversation_Note__c> noteList = [
-            SELECT Id, Name, LastModifiedDate, CreatedDate, CRM_Is_Read__c, CRM_Theme_Group__c
+            SELECT Id, Name, LastModifiedDate, CreatedDate, CRM_Is_Read__c, CRM_Theme_Group__r.Name
             FROM Conversation_Note__c WHERE CRM_Is_Read__c = false AND CRM_Created_By_Ident__c = null 
             ORDER BY CreatedDate DESC
         ];
