--- a/force-app/main/default/classes/stoInboxHelper.cls
+++ b/force-app/main/default/classes/stoInboxHelper.cls
@@ -25,13 +25,13 @@ public with sharing class stoInboxHelper {
             inboxlist.add(i);  
         }
         List<Conversation_Note__c> noteList = [
-            SELECT Id, Name, LastModifiedDate, CreatedDate, CRM_Is_Read__c, CRM_Theme_Group__r.Name
+            SELECT Id, Name, LastModifiedDate, CreatedDate, CRM_Is_Read__c, STO_External_Name__c
             FROM Conversation_Note__c WHERE CRM_Is_Read__c = true AND CRM_Created_By_Ident__c = null 
             ORDER BY CreatedDate DESC
         ];
         for(Conversation_Note__c t : noteList){
             thread i = new thread(); 
-            i.name = t.CRM_Theme_Group__r.Name + ' - Samtalereferat'; 
+            i.name = t.STO_External_Name__c; 
             i.recordId = t.Id; 
             i.lastModifiedDate = t.LastModifiedDate; 
             i.closeDate = t.CreatedDate; 
@@ -67,13 +67,13 @@ public with sharing class stoInboxHelper {
             inboxlist.add(i);  
         }
         List<Conversation_Note__c> noteList = [
-            SELECT Id, Name, LastModifiedDate, CreatedDate, CRM_Is_Read__c, CRM_Theme_Group__r.Name
+            SELECT Id, Name, LastModifiedDate, CreatedDate, CRM_Is_Read__c, STO_External_Name__c
             FROM Conversation_Note__c WHERE CRM_Is_Read__c = false AND CRM_Created_By_Ident__c = null 
             ORDER BY CreatedDate DESC
         ];
         for(Conversation_Note__c t : noteList){
             thread i = new thread(); 
-            i.name = t.CRM_Theme_Group__r.Name + ' - Samtalereferat'; 
+            i.name = t.STO_External_Name__c; 
             i.recordId = t.Id; 
             i.lastModifiedDate = t.LastModifiedDate; 
             i.closeDate = t.CreatedDate; 
