Updates text length and typo

--- a/force-app/main/default/translations/no.translation-meta.xml
+++ b/force-app/main/default/translations/no.translation-meta.xml
@@ -129,7 +129,7 @@ Kontakt oss på chat eller telefon &lt;a href=&quot;tel:55553333&quot;&gt;55 55 
         <name>Skriv_til_oss_headline</name>
     </customLabels>
     <customLabels>
-        <label>Send bare spørsmål eller opplysninger som gjelder din sak. Husk å få med alle opplysninger som kan være relevant for saken. Du kan skrive maksimalt 1000 tegn. Det det er cirka en halv A4-side.</label>
+        <label>Send bare spørsmål eller opplysninger som gjelder din sak. Husk å få med alle opplysninger som kan være relevant for saken. Du kan skrive maksimalt 1000 tegn. Det er cirka en halv A4-side.</label>
         <name>Skriv_til_oss_intro_text</name>
     </customLabels>
     <customLabels>
